<resources>
    <string name="app_name">剑侠情缘助手</string>
    <string name="efun_pd_logout">再次点击退出!</string>
    <string name="efun_pd_reset_account_hint">点击切换账号</string>
    <string name="efun_pd_share_2">Share 至以下平台</string>
    <string name="efun_pd_loading">Loading</string>
    <string name="efun_pd_push_loading">正在加载ing,请稍等一会</string>
    <string name="efun_pd_recommended_games_more">显示全部</string>
    <string name="efun_pd_games_summary">大家都在看</string>
    <string name="efun_pd_xlistview_header_hint_normal">下拉刷新</string>
    <string name="efun_pd_xlistview_header_hint_ready">放开我，人家正在加载了喇</string>
    <string name="efun_pd_xlistview_header_hint_loading">正在愉快加载ing</string>
    <string name="efun_pd_xlistview_header_last_time">上次更新时间：</string>
    <string name="efun_pd_xlistview_footer_hint_normal">查看更多</string>
    <string name="efun_pd_xlistview_footer_hint_ready">松开载入更多</string>
    <string name="efun_pd_xlistview_time_now">刚刚</string>
    <string name="efun_pd_xlistview_time_minutes">分钟前</string>
    <string name="efun_pd_network_error">网络未连接，请检查你的网络状况</string>
    <string name="efun_pd_request_error">请求异常了，请点击图片重新尝试</string>
    <string name="efun_pd_timeout_error">请求超时了，请点击图片重新尝试</string>
    <string name="efun_pd_empty_error">暂无数据，请稍后再试</string>
    <string name="efun_pd_vedio">视频</string>
    <string name="efun_pd_game">游戏</string>
    <string name="efun_pd_welfare">福利</string>
    <string name="efun_pd_summary">资讯</string>
    <string name="efun_pd_news">新聞</string>
    <string name="efun_pd_summary_content">资讯内容</string>
    <string name="efun_pd_strategy">攻略</string>
    <string name="efun_pd_code">QR Code扫描</string>
    <string name="efun_pd_set">设置</string>
    <string name="efun_pd_sure">确定</string>
    <string name="efun_pd_check">查看</string>
    <string name="efun_pd_cancel">取消</string>
    <string name="efun_pd_update_ok">好哦</string>
    <string name="efun_pd_update_cancel">不要</string>
    <string name="efun_pd_commend">评论</string>
    <string name="efun_pd_share">分享</string>
    <string name="efun_pd_description">描述</string>
    <string name="efun_pd_email">Email邮箱</string>
    <string name="efun_pd_cs_ask_notify">*留下您的联系方式</string>
    <string name="efun_pd_submit">确定</string>
    <string name="efun_pd_save">保存</string>
    <string name="efun_pd_edit">编辑</string>
    <string name="efun_pd_share_success">分享成功</string>
    <string name="efun_pd_share_failure">分享失败</string>
    <string name="efun_pd_login_exception">登录异常</string>
    <string name="efun_pd_dimensional_url_error">链接地址有误！</string>
    <string name="efun_pd_login_authoriza_account">是否授权使用Efun游戏平台账号登录？</string>
    <string name="efun_pd_login_authoriza_submit">确认授权</string>
    <string name="efun_pd_login_error_timeout">您当前的登录信息已过期，请重新登录喔</string>
    <string name="efun_pd_login_error_pwd">您当前的登录密码进行过更新，请重新登录喔</string>
    <string name="efun_pd_get_reword">领取记录</string>
    <string name="efun_pd_gift_account">序号:</string>
    <string name="efun_pd_copy">复制</string>
    <string name="efun_pd_gift_password">密码:</string>
    <string name="efun_pd_copy_success">序号已复制</string>
    <string name="efun_pd_copy_pw">密码已复制</string>
    <string name="efun_pd_code_center">我的序号中心</string>
    <string name="efun_pd_regist_log">注册/登录</string>
    <string name="efun_pd_manager_account">账号管理</string>
    <string name="efun_pd_persion_reset_password_info">设置最新的账号密码</string>
    <string name="efun_pd_current_password">旧密码</string>
    <string name="efun_pd_new_password">新密码</string>
    <string name="efun_pd_new_password_notify">密码由6-16个字符组成，区分大小写</string>
    <string name="efun_pd_confirm_password">确认密码</string>
    <string name="efun_pd_reset_password">更新密码</string>
    <string name="efun_pd_reset_per_info">更新个人资料</string>
    <string name="efun_pd_reset_per_title">个人资料</string>
    <string name="efun_pd_reset_account">切换账号</string>
    <string name="efun_pd_reset_save">保存</string>
    <string name="efun_pd_reset_confirm_change">确认修改</string>
    <string name="efun_pd_reset_reset">更新</string>
    <string name="efun_pd_reset_change_pwd">更新密码</string>
    <string name="efun_pd_reset_set_change_point_pwd_help">帮助</string>
    <string name="efun_pd_reset_person_change_pwd_desc">您的密码已经修改，请重新登录喔</string>
    <string name="efun_pd_exit_login">退出登录</string>
    <string name="efun_pd_header">头像</string>
    <string name="efun_pd_setting_subscription">订阅</string>
    <string name="efun_pd_setting_push">推送设置</string>
    <string name="efun_pd_setting_help">帮助与反馈</string>
    <string name="efun_pd_setting_help_empty">反馈信息不能为空</string>
    <string name="efun_pd_setting_appraisal">为剑侠情缘助手评分</string>
    <string name="efun_pd_setting_help_and_feedback">爱我请留言，不喜欢我的也请告诉我</string>
    <string name="efun_pd_setting_send_mes">送出想法</string>
    <string name="efun_pd_setting_push_open">开启应用推送</string>
    <string name="efun_pd_setting_push_close">关闭应用推送</string>
    <string name="efun_pd_check_update">检测更新</string>
    <string name="efun_pd_last_version">已是最新版本</string>
    <string name="efun_pd_new_version">新版本：</string>
    <string name="efun_pd_push_to_friends">推荐给好友</string>
    <string name="efun_pd_clear_data">清除缓存</string>
    <string name="efun_pd_about_us">关于我们</string>
    <string name="efun_pd_close">关闭</string>
    <string name="efun_pd_notification_update_1">人家有新版本辣，要更新一下吗？</string>
    <string name="efun_pd_notification_update_2">人家有新版本辣，更新一下吧</string>
    <string name="efun_pd_has_new">有新回覆</string>
    <string name="efun_pd_camera_crop_error">您的设备不支持图片裁切，请到电脑上进行修改</string>
    <string name="efun_pd_thumb_error">您的设备不支持</string>
    <string name="efun_pd_error_video_url">无效的视频地址</string>
    <string name="efun_pd_hint_account">账号</string>
    <string name="efun_pd_hint_password">密码</string>
    <string name="efun_pd_hint_password_confirm">重复密码</string>
    <string name="efun_pd_hint_register_bind_phone">（选填）</string>
    <string name="efun_pd_login">登录</string>
    <string name="efun_pd_login_title_login">登录</string>
    <string name="efun_pd_login_button_login">确认</string>
    <string name="efun_pd_login_title_register">注册</string>
    <string name="efun_pd_login_forget">找回密码？</string>
    <string name="efun_pd_login_forget_tips">*填写已绑定的Email邮箱</string>
    <string name="efun_pd_login_register">没有账号的先注册哦～</string>
    <string name="efun_pd_hint_account_by_bahamut">巴哈用户</string>
    <string name="efun_pd_hint_account_by_facebook">Facebook 用户</string>
    <string name="efun_pd_hint_account_by_google">Google+ 用户</string>
    <string name="efun_pd_hint_account_by_twitter">Twitter 用户</string>
    <string name="efun_pd_register_account">账号：</string>
    <string name="efun_pd_register_password">密码：</string>
    <string name="efun_pd_register_cofirm_password">确认密码：</string>
    <string name="efun_pd_register_email">邮箱：</string>
    <string name="efun_pd_register_finish">注册</string>
    <string name="efun_pd_hint_register_account">6~18个字符，需使用字母开头</string>
    <string name="efun_pd_hint_register_password">6~16个字符，区分大小写</string>
    <string name="efun_pd_hint_register_cofirm_password">请再次填写密码</string>
    <string name="efun_pd_hint_register_email">请输入邮箱（选填）</string>
    <string name="efun_pd_hint_forget_email">*请填写注册账号所用的Email邮箱</string>
    <string name="efun_pd_email_intro">Email邮箱地址：</string>
    <string name="efun_pd_register">注册</string>
    <string name="efun_pd_service_clause">剑侠情缘助手隐私政策</string>
    <string name="efun_pd_forget_email">Email邮箱:</string>
    <string name="efun_pd_forget_password">忘记密码</string>
    <string name="efun_pd_get_password">找回密码</string>
    <string name="efun_pd_get_submit">确认</string>
    <string name="efun_pd_game_item_version_prefix">更新至</string>
    <string name="efun_pd_game_item_version">版</string>
    <string name="efun_pd_loading_msg_commend">提交数据中...</string>
    <string name="efun_pd_uninstalled_google_play">请先安装Google商店</string>
    <string name="efun_pd_loading_msg_login">登录中...</string>
    <string name="efun_pd_toast_timeout">请求超时，请稍后再试</string>
    <string name="efun_pd_toast_empty_account">请输入账号</string>
    <string name="efun_pd_toast_empty_password">请输入密码</string>
    <string name="efun_pd_toast_error_account">账号格式：6~18个字符，可使用字母、数字、下划线，需以字母开头！</string>
    <string name="efun_pd_toast_error_account_first_char">账号格式：需以字母开头！</string>
    <string name="efun_pd_toast_error_password">密码要求6~16个字符！</string>
    <string name="efun_pd_toast_empty_confirm_password">请输入重复密码</string>
    <string name="efun_pd_toast_empty_different_password">前后密码不一致</string>
    <string name="efun_pd_toast_empty_email">请输入Email邮箱</string>
    <string name="efun_pd_toast_error_email">Email邮箱格式错误</string>
    <string name="efun_pd_toast_error_webview_load">页面加载错误...</string>
    <string name="efun_pd_sex_boy">男</string>
    <string name="efun_pd_sex_girl">女</string>
    <string name="efun_pd_anonymous">匿名</string>
    <string name="efun_pd_empty_content">请输入内容</string>
    <string name="efun_pd_empty_nick">Player</string>
    <string name="efun_pd_agree_service_clause_1">我已阅读并同意</string>
    <string name="efun_pd_agree_service_clause_2"> 《剑侠情缘助手隐私政策》 </string>
    <string name="efun_pd_check_service_clause">请勾选服务条款</string>
    <string name="efun_pd_person_member_name">账号：</string>
    <string name="efun_pd_person_member_id">会员ID：</string>
    <string name="efun_pd_efun_account_empty">剑侠情缘助手用户</string>
    <string name="efun_pd_tab_find">发现</string>
    <string name="efun_pd_tab_connected">交流</string>
    <string name="efun_pd_upload_data">上传数据中...</string>
    <string name="efun_pd_toast_url_empty">敬请期待！</string>
    <string name="efun_pd_forget_pw_email">填写已绑定的邮箱</string>
    <string name="efun_pd_video_toast_loading">正在玩命加载视频中。。。</string>
    <string name="efun_pd_share_summary_content">剑侠情缘助手分享Hot资讯</string>
    <string name="efun_pd_share_activity_content">剑侠情缘助手活动大放送</string>
    <string name="efun_pd_share_app_content">下载剑侠情缘助手,真的很嗨~</string>
    <string name="efun_pd_share_googlejia_error">分享失败，未安装google+应用</string>
    <string name="efun_pd_share_line_error">您还没有安装Line客户端，不能进行分享。</string>
    <string name="efun_pd_code_1028">参数错误</string>
    <string name="efun_pd_code_1029">网络异常</string>
    <string name="progress_msg">Loading</string>
	<string name="initializing_msg">初始化中...</string>
	<string name="finalizing_msg">完成...</string>
	<string name="efun_pd_login_with_other_account">---第三方登录---</string>
	<string name="efun_pd_dialog_serial_tips">序号：</string>
	<string name="efun_pd_confirm">确认</string>
    <string name="efun_pd_no_data_no_summary">还没有相关的新闻或资讯哦~</string>
    <string name="efun_pd_no_data_no_commend">还没有相关的评论，点击评论</string>
    <string name="efun_pd_no_data_no_activity">活动还没开启，请耐心等候</string>
    <string name="efun_pd_no_data_no_giftself">还未领取任何礼包，赶快去领取吧~</string>
    <string name="efun_pd_no_data_no_server_reply">暂无回复哦，请先提问~</string>
    <string name="efun_pd_no_video">暂无视频哦</string>
    <string name="efun_pd_share_facebook">Facebook</string>
    <string name="efun_pd_share_twitter">Twitter</string>
    <string name="efun_pd_share_line">LINE</string>
    <string name="efun_pd_share_googlejia">Google +</string>
    <string name="efun_pd_share_email">Email</string>
    <string name="efun_pd_act">活动</string>
    <string-array name="efun_pd_pop_per_info_pic">
        <item>拍照</item>
        <item>选择本地图片</item>
    </string-array>
    <string-array name="efun_pd_pop_per_info_sex">
        <item>@string/efun_pd_sex_boy</item>
        <item>@string/efun_pd_sex_girl</item>
    </string-array>
    <string-array name="efun_pd_summary_v_tab">
        <item>全部</item>
        <item>@string/efun_pd_news</item>
        <item>公告</item>
        <item>活动</item>
        <item>@string/efun_pd_strategy</item>
        <item>视频</item>
    </string-array>
</resources>