<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/e_ffffff"
    android:scrollbars="none" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <com.efun.platform.widget.TitleView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
        </com.efun.platform.widget.TitleView>

        <ImageView
            android:layout_width="@dimen/e_size_370"
            android:layout_height="@dimen/e_size_178"
            android:layout_marginTop="@dimen/e_size_100"
            android:src="@drawable/efun_pd_login_logo1" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/e_size_75"
            android:gravity="center"
            android:orientation="horizontal" >
            
            <LinearLayout
               	android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                >
                <TextView
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:gravity="center"
	                android:text="@string/efun_pd_get_password"
	                android:textColor="@color/e_00b7ee"
	                android:textSize="@dimen/e_text_size_48" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/e_size_2"
                    android:layout_marginTop="@dimen/e_size_10"
                    android:background="@color/e_00b7ee" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="@dimen/e_size_834"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/e_size_50"
                android:gravity="center"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/e_size_10"
                    android:orientation="horizontal" >

                    <TextView 
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/e_000000"
                        android:textSize="@dimen/e_text_size_45"
                        android:text="@string/efun_pd_register_account"/>
                    <EditText
                        android:id="@+id/edit_1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="@dimen/e_size_20"
                        android:background="@null"
                        android:ems="10"
                        android:gravity="center_vertical"
                        android:imeOptions="actionNext"
                        android:singleLine="true"
                        android:textColor="@color/e_696969"
                        android:textSize="@dimen/e_text_size_45" >
                        <requestFocus />
                    </EditText>

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/e_size_1"
                    android:layout_marginTop="@dimen/e_size_30"
                    android:background="@color/e_d9d9d9" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/e_size_10"
                    android:layout_marginTop="@dimen/e_size_40"
                    android:orientation="horizontal" >

                    <TextView 
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/e_000000"
                        android:textSize="@dimen/e_text_size_45"
                        android:text="@string/efun_pd_register_email"/>
                    
                    <EditText
                        android:id="@+id/edit_2"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1.0"
                        android:layout_marginLeft="@dimen/e_size_20"
                        android:background="@null"
                        android:gravity="center_vertical"
                        android:imeOptions="actionDone"
                        android:singleLine="true"
                        android:textColor="@color/e_696969"
                        android:textSize="@dimen/e_text_size_45" />

                    <!-- <ImageView
                        android:id="@+id/findpwd_eye"
                        android:layout_width="@dimen/e_size_64"
                        android:layout_height="@dimen/e_size_42"
                        android:layout_gravity="center_vertical"
                        android:layout_marginRight="@dimen/e_size_38"
                        android:background="@drawable/efun_pd_eye_selector" /> -->
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/e_size_1"
                    android:layout_marginTop="@dimen/e_size_20"
                    android:background="@color/e_d9d9d9" />
                
                <TextView
                android:layout_width="@dimen/e_size_834"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/e_size_30"
                android:gravity="left"
                android:paddingRight="@dimen/e_size_30"
                android:textColor="@color/e_ff6867"
                android:textSize="@dimen/e_text_size_40"
                android:text="@string/efun_pd_forget_pw_email" />
                
            </LinearLayout>

            
            <LinearLayout
                    android:id="@+id/contaier_linear_1"
                    android:layout_width="@dimen/e_size_510"
            		android:layout_height="@dimen/e_size_100"
                    android:layout_marginTop="@dimen/e_size_60"
                    android:background="@drawable/efun_pd_rectangle_567fbc_bg"
                    android:gravity="center"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
            			android:layout_height="wrap_content"
                        android:text="@string/efun_pd_login_button_login"
                        android:textColor="@color/e_ffffff"
                        android:textSize="@dimen/e_text_size_48" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</ScrollView>